--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,7 +42,11 @@
         position:absolute; top:10px; 
         left:10px; right:10px;
     }
-    
+    button{
+      color:blue;
+      font-family: Times;
+      border-radius: 20px;
+    }
     #btnA {
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
