--- a/www/css/style.css
+++ b/www/css/style.css
@@ -50,6 +50,7 @@
     #btnA {
         font-size: 20px;
         background: yellow;
+        color: green;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
     }
     
