--- a/www/css/style.css
+++ b/www/css/style.css
@@ -43,7 +43,7 @@
 
     
     #mycanvas {
-        color: #ffffff;
+        color:white;
         font-size: 40px;
         text-align: center;
         position:absolute; top:10px; 
