--- a/www/css/style.css
+++ b/www/css/style.css
@@ -74,6 +74,10 @@
         font-size: 10px;
         position:absolute; top:550px; left:10%; width:28%;height:60px; 
     }
+    #btnE {
+        font-size: 25px;
+        position:absolute; top:450px; left:75%; width:20%; height:50px;
+    }
     
     #minute {
         font-size: 30px;
