--- a/www/css/style.css
+++ b/www/css/style.css
@@ -78,6 +78,14 @@
         font-size: 25px;
         position:absolute; top:450px; left:75%; width:20%; height:50px;
     }
+    #btnF {
+        font-size: 20px;
+        position:absolute; top:550px; left:40%; width:28%; height:60px; 
+    }
+    #btnG {
+        font-size: 20px;
+        position:absolute; top:550px; left:70%; width:28%; height:60px; 
+    }
     
     #minute {
         font-size: 30px;
